# ESE-Development

./: .coverage  .gitignore  Makefile  PRD.md  README.md  SYSTEM_OVERVIEW.md  coverage.xml  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  runtime.config.json  test-login.md
.github/workflows/: ci.yml
automation/: README.md
backend/: __init__.py  alembic.ini  main.py  pyproject.toml  requirements-dev.txt
backend/alembic/: env.py
backend/alembic/versions/: 202502180001_initial_audit_enrollment.py  d15023b50184_add_recognition_and_evaluation_models.py
backend/app/: __init__.py  database.py  main.py
backend/app/core/: __init__.py  audit.py  auth.py  config.py  database.py  events.py  rbac.py
backend/app/core/middleware/: __init__.py  correlation.py  logging.py
backend/app/enrollment/: __init__.py  api.py  events.py  examples.http  models.py  repo.py  schemas.py  service.py
backend/app/events/: chain.py
backend/app/models/: __init__.py  audit.py  enrollment.py  evaluation.py  recognition.py  types.py
backend/ese_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/http/: enrollment.http
backend/scripts/: seed_dev.py
backend/tests/: test_models.py
backend/tests/api/: test_enrollment_api.py
backend/tests/integration/: test_enrollment_workflow.py
backend/tests/property/: test_event_chain_properties.py
backend/tests/unit/: test_audit_logging.py  test_rbac.py
docs/: ARCHITECTURE.md  COMMS_GOVERNANCE.md  DOMAIN_EVENTS.md  IMPLEMENTATION_SUMMARY.md  OBSERVABILITY.md  PERFORMANCE_BUDGET.md  QUICK_START_RECOGNITION.md  RBAC_MATRIX.md  RECOGNITION_EVALUATION.md  RECOGNITION_MIGRATION.md  RECOGNITION_OPERATIONS.md  RECOGNITION_ROADMAP.md  ROLLBACK_PLAN.md  SECURITY_MODEL.md  SEEDING.md  TEST_STRATEGY.md
docs/testing/: performance.md
k6/: smoke.js
requests/: enrollment.http
scripts/: coverage_gate.py
src/: App.tsx  ErrorFallback.tsx  index.css
src/components/auth/: LoginScreen.tsx
src/components/dashboard/: AIAssistant.tsx  AutomationCenter.tsx  Dashboard.tsx  EvaluationCenter.tsx  RecognitionCenter.tsx  ResultsCenter.tsx
src/components/ui/: badge.tsx  card.tsx  input.tsx  tabs.tsx
src/data/: staff-data.ts
src/lib/: authorization.ts  evaluations.ts  recognition-policy.ts
