[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ese-backend"
version = "0.1.0"
description = "Backend services for ESE automation platform"
requires-python = ">=3.12"
authors = [{ name = "ESE Platform", email = "devnull@example.com" }]
license = "MIT"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "psycopg[binary,pool]>=3.1.12,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0,<25.0.0",
    "mypy>=1.13.0,<2.0.0",
    "ruff>=0.8.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "httpx>=0.27.0,<0.28.0",
    "bandit>=1.7.10,<2.0.0",
    "pip-audit>=2.7.3,<3.0.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["app", "tests"]
select = ["E", "F", "I", "UP", "B", "S", "N", "ANN", "COM", "PIE", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "S104", "PIE804"]

[tool.mypy]
python_version = "3.12"
packages = ["app"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=xml --cov-report=term --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
